# Hydrograf

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DATA_MODEL.md  DEVELOPMENT_STANDARDS.md  IMPLEMENTATION_PROMPT.md  LICENSE  PRD.md  PROGRESS.md  README.md  SCOPE.md  TECHNICAL_DEBT.md  admin.key.example  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  config.yaml.example  entrypoint.sh  pyproject.toml  requirements.txt
backend/api/: main.py
backend/api/dependencies/: admin_auth.py
backend/api/endpoints/: admin.py  depressions.py  health.py  hydrograph.py  profile.py  select_stream.py  tiles.py  watershed.py
backend/core/: boundary.py  catchment_graph.py  cn_calculator.py  cn_tables.py  config.py  constants.py  database.py  db_bulk.py  flow_graph.py  hydrology.py  land_cover.py  morphometry.py  morphometry_raster.py  precipitation.py  raster_io.py  raster_service.py  sewer_service.py  soil_hsg.py  stream_extraction.py  watershed.py  watershed_service.py  zonal_stats.py
backend/migrations/: env.py
backend/migrations/versions/: 001_create_precipitation_data.py  002_create_core_tables.py  003_extend_stream_network.py  004_create_depressions_table.py  005_add_threshold_to_stream_network.py  006_add_upstream_area_index.py  007_create_stream_catchments.py  008_add_depressions_filter_indexes.py  009_add_stream_source_partial_index.py  010_fix_stream_unique_constraint.py  011_add_tile_spatial_indexes.py  012_extend_stream_catchments.py  013_add_stream_partial_index.py  014_add_segment_idx_to_stream_network.py  015_drop_flow_network.py  016_create_soil_hsg.py  017_remove_threshold_100.py  018_add_catchment_segment_idx_index.py  019_update_duration_check_pmaxtp.py  020_full_pmaxtp_range.py  021_add_bdot_streams.py  022_add_hydraulic_length.py  023_add_flow_path_columns.py  024_add_divide_flow_path.py  025_create_sewer_tables.py
backend/models/: __init__.py  schemas.py
backend/scripts/: README.md  __init__.py  analyze_watershed.py  bootstrap.py  clean.py  download_dem.py  download_landcover.py  download_sewer.py  e2e_task9.py  export_pipeline_gpkg.py  export_task9_gpkg.py  generate_dem_overlay.py  generate_dem_tiles.py  generate_depressions.py  generate_streams_overlay.py  generate_tiles.py  import_dem_raster.py  import_landcover.py  prepare_area.py  preprocess_precipitation.py  process_dem.py
backend/tests/: conftest.py  conftest_db.py
backend/tests/fixtures/: generate_test_data.py  test_catchments.sql  test_points.py
backend/tests/integration/: test_depressions.py  test_health.py  test_hydrograph.py  test_profile.py  test_select_stream.py  test_select_stream_correctness.py  test_tiles.py  test_watershed.py
backend/tests/performance/: test_query_performance.py
backend/tests/unit/: test_admin_auth.py  test_admin_auth_hardened.py  test_admin_bootstrap.py  test_admin_cleanup.py  test_admin_dashboard.py  test_admin_integration.py  test_admin_resources.py  test_admin_upload.py  test_bdot_stream_matching.py  test_bootstrap.py  test_boundary.py  test_boundary_smoothing.py  test_building_raising.py  (+38 more)
backend/utils/: __init__.py  dem_color.py  geometry.py  raster_utils.py  sheet_finder.py
(+78 files in other folders)
