[project]
name = "hydrograf"
version = "0.3.0"
description = "Hydrological analysis system - watershed delineation and hydrograph generation"
readme = "../README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Hydrograf Team"}
]
keywords = ["hydrology", "watershed", "hydrograph", "GIS", "SCS-CN"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Hydrology",
]

[project.urls]
Repository = "https://github.com/user/hydrograf"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py312"]
exclude = '''
/(
    \.venv
    | migrations
    | __pycache__
)/
'''

[tool.flake8]
max-line-length = 88
exclude = [".venv", "migrations", "__pycache__"]
ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["migrations", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = [
    ".venv/*",
    "tests/*",
    "migrations/*",
    "scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
